--- a/.github/worflows/main.yml
+++ b/.github/worflows/main.yml
@@ -1,7 +1,15 @@
 name: CD Pipeline
-on: [push]
+
+on:
+  push:
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
+
 jobs:
-  Set-Environment:
+  Tests:
     runs-on: ubuntu-latest
     steps:
-      run: apt-get update && apt-get upgrade -y
+      - uses: actions/checkout@v3
+      - run: apt-get update && apt-get upgrade -y
+      - run: ls
