--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
     branches: ["main"]
 
 jobs:
-  Tests & Build:
+  Tests and Build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repos
